--- a/dl.css
+++ b/dl.css
@@ -129,12 +129,15 @@
     padding: 16px 30px;
     background: #5c305ba5;
 }
-.banner{
+.banner {
+    position: relative;
     width: 100%;
-   
+    margin: 20px 0;
 }
+
 .banner::after {
     content: "";
+    position: absolute;
     background-color: black;
     top: 0;
     left: 0;
@@ -143,22 +146,12 @@
     width: 100%;
     z-index: 1;
 }
-.banner .img3{
+
+.banner .img3 {
     width: 100%;
-    position: relative;
-    height: 30%;
-}
-.content--banner {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    right: 0;
-    top: 90%;
-    z-index: 2;
-}
-.banner {
-    margin: 90px 0;
-    position: relative;
+    height: 250px; /* Giảm chiều cao của hình ảnh */
+    max-width: 100%; /* Đảm bảo hình ảnh không vượt quá chiều rộng của phần tử cha */
+    object-fit: cover; /* Đảm bảo hình ảnh không bị biến dạng khi thay đổi kích thước */
 }
 .content--banner {
     position: absolute;
@@ -168,6 +161,7 @@
     top: 7%;
     z-index: 2;
 }
+
 .cus-content--banner {
     width: 40%;
     color: #fff;
@@ -178,12 +172,14 @@
     border-radius: 8px;
     height: 50px;
 }
+
 .banner img {
     display: block;
 }
+
 /* CSS cho phần tour-main1 */
 .tour-main1 {
-    margin-top: 50px;
+    margin-top: 0px;
     padding: 20px;
     display: flex;
     justify-content: center; /* Căn giữa phần tour-main1 trên trang */
@@ -196,29 +192,26 @@
     display: flex;
     flex-wrap: wrap;
     gap: 28px 18px;
-    justify-content: space-between; /* Căn các item tour1 theo chiều ngang */
 }
-
-/* CSS cho phần item--tour1 của tour-main1 */
 .item--tour1 {
     width: 32%; /* Độ rộng của mỗi item tour1 */
     position: relative;
     overflow: hidden;
 }
 
-/* CSS cho hình ảnh của item--tour1 */
 .item--tour1 img {
     max-width: 100%;
     display: block;
     transition: transform 0.3s ease;
+    padding: 0 139px 0 7px;
+    width: 300px;   
+    height: 168px;
 }
 
-/* Hiệu ứng khi hover vào hình ảnh của item--tour1 */
 .item--tour1:hover img {
     transform: scale(1.1);
 }
 
-/* CSS cho nội dung của item--tour1 */
 .content--tour1 {
     position: absolute;
     bottom: 0;
@@ -231,7 +224,6 @@
     transition: bottom 0.3s ease;
 }
 
-/* Hiệu ứng khi hover vào item--tour1 */
 .item--tour1:hover .content--tour1 {
     bottom: -50px;
 }
@@ -239,9 +231,14 @@
     text-align: center;
 }
 .item--tour1 {
-    width: 30%; /* Độ rộng của mỗi item tour1 */
-    margin: 0 1.5%; /* Khoảng cách giữa các item */
-    display: inline-block; /* Hiển thị các item trên cùng một hàng */
-    vertical-align: top; /* Căn đỉnh của các item theo đỉnh của hàng */
+    display: flex;
+    
+ }
+ .item--tour1 img{
+ flex: 1;
+  max-width: 100%; 
 }
-
+.chung{
+    display: flex;
+    justify-content: space-between;
+}
