--- a/dl.css
+++ b/dl.css
@@ -2,36 +2,44 @@
     width: 100%;
     height: auto;
 }
+
 .menu {
     width: 100%;
     height: 120px;
     background-color: white;
 }
+
 .header {
     width: 100%;
     height: 100px;
     display: flex;
     justify-content: space-between;
 }
+
 .logo {
     width: 50%;
 }
+
 .up {
     width: 100%;
     height: 70px;
     margin: 0 auto;
 }
-.up img{
+
+.up img {
     width: 150px;
     height: 70px;
 }
-.up ul a{
+
+.up ul a {
     list-style: none;
     margin-top: 0px;
 }
-.up ul form{
+
+.up ul form {
     float: right;
 }
+
 .search {
     height: 35px;
     width: 750px;
@@ -39,10 +47,12 @@
     margin-right: 400px;
     align-items: center;
 }
-.search input{
+
+.search input {
     width: 500px;
     height: 35px;
 }
+
 .search button {
     width: 50px;
     height: 40px;;
@@ -50,75 +60,72 @@
     border: none;
     background-color: #428BCA;
 }
+
 .header .search {
     flex: 1;
     position: relative;
 }
+
 .header a {
     text-decoration: none;
     color: white;
 }
+
 .down {
     padding: 0px 10px;
     background-color: purple;
 }
-.a {
-    text-decoration: none;
-}
+
 .down ul {
     list-style: none;
     display: flex;
     justify-content: center;
 }
+
 .down li a {
     display: flex;
     list-style: none;
     padding: 15px 20px;
     border-right: 1px solid white;
 }
+
 .down li a:hover {
     background-color: #3A8DD1;
 }
+
 .slider {
     width: 100%;
     margin-top: 50px;
 }
+
 .item-slider {
     width: 100%;
 }
-.top--tour{
+
+.top--tour {
     text-decoration: none;
     text-align: center;
     margin-bottom: 32px;
-}
-.top--tour {
-    text-align: center;
-    margin-bottom: 32px;
-}
-.item-slider .img2{
-    width: 100%;
-}
-.top--tour {
-    text-align: center;
-    margin-bottom: 32px;
-}
-.top--tour h2 {
     color: #660066;
     font-weight: 900;
 }
+
 .list--tour {
     display: flex;
     flex-wrap: wrap;
     gap: 28px 18px;
 }
+
 .item--tour {
     width: 32%;
     position: relative;
 }
+
 .item--tour img {
     max-width: 100%;
     display: block;
 }
+
 .content--tour {
     position: absolute;
     color: #fff;
@@ -129,6 +136,7 @@
     padding: 16px 30px;
     background: #5c305ba5;
 }
+
 .banner {
     position: relative;
     width: 100%;
@@ -138,7 +146,7 @@
 .banner::after {
     content: "";
     position: absolute;
-    background-color: black;
+    background-color: #b4b4b445;
     top: 0;
     left: 0;
     right: 0;
@@ -149,16 +157,17 @@
 
 .banner .img3 {
     width: 100%;
-    height: 250px; /* Giảm chiều cao của hình ảnh */
-    max-width: 100%; /* Đảm bảo hình ảnh không vượt quá chiều rộng của phần tử cha */
-    object-fit: cover; /* Đảm bảo hình ảnh không bị biến dạng khi thay đổi kích thước */
+    height: 250px;
+    max-width: 100%;
+    object-fit: cover;
 }
+
 .content--banner {
     position: absolute;
     width: 100%;
     left: 0;
     right: 0;
-    top: 7%;
+    top: 25%;
     z-index: 2;
 }
 
@@ -180,9 +189,9 @@
 /* CSS cho phần tour-main1 */
 .tour-main1 {
     margin-top: 0px;
-    padding: 20px;
+    padding: 40px;
     display: flex;
-    justify-content: center; /* Căn giữa phần tour-main1 trên trang */
+    justify-content: center;
     margin-left: 432px;
     flex-wrap: wrap;
 }
@@ -193,8 +202,9 @@
     flex-wrap: wrap;
     gap: 28px 18px;
 }
+
 .item--tour1 {
-    width: 32%; /* Độ rộng của mỗi item tour1 */
+    width: calc(33.33% - 20px);
     position: relative;
     overflow: hidden;
 }
@@ -204,8 +214,8 @@
     display: block;
     transition: transform 0.3s ease;
     padding: 0 139px 0 7px;
-    width: 300px;   
-    height: 168px;
+    width: 500px;   
+    height: 268px;
 }
 
 .item--tour1:hover img {
@@ -227,18 +237,152 @@
 .item--tour1:hover .content--tour1 {
     bottom: -50px;
 }
+
 .box-wp{
     text-align: center;
 }
+
 .item--tour1 {
     display: flex;
-    
- }
- .item--tour1 img{
- flex: 1;
-  max-width: 100%; 
 }
-.chung{
+
+.item--tour1 img{
+    flex: 1;
+    max-width: 100%; 
+}
+
+.chung {
     display: flex;
     justify-content: space-between;
 }
+
+.why {
+    margin-top: 0px;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    margin-left: 432px;
+    flex-wrap: wrap;
+}
+
+.why h2 {
+    color: #660066;
+    margin-bottom: 40px;
+    font-weight: 900;
+}
+
+.list-why {
+    display: flex;
+}
+
+.item-why {
+    width: 25%;
+}
+
+.item-why .img {
+    width: 64px;
+    height: 64px;
+    border: 2px solid #5F245A;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.item-why img {
+    width: 48px;
+    display: block;
+    margin: 0 auto;
+}
+
+.news-main {
+    padding-bottom: 60px;
+}
+
+.top--news {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.top--news h2 {
+    color: #660066;
+    font-weight: 900;
+}
+
+.list--news {
+    display: flex;
+    gap: 24px;
+}
+
+.item--news {
+    width: 33%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    position: relative;
+}
+
+.item--news img {
+    width: 100%;
+}
+
+.content--news {
+    padding: 0 24px;
+    position: relative;
+}
+
+.cus-news {
+    padding: 16px 20px;
+    margin-top: -80px;
+    background-color: #ffffffc7;
+}
+
+.cus-news h3 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    font-size: 20px;
+    margin: 10px 0 20x 0;
+}
+
+.cus-news .desc--news {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
+
+.cus-news a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 600;
+}
+
+section.why {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+}
+
+/* CSS cho phần footer */
+.footer {
+    display: flex;
+    justify-content: space-around;
+    background-color: #333;
+    color: #fff;
+    padding: 50px 0;
+}
+
+.item--footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.item--footer img {
+    max-width: 100px;
+    max-height: 100px;
+    margin-top: 10px;
+}
+
