--- a/dl.css
+++ b/dl.css
@@ -383,23 +383,75 @@ section.why {
     padding: 50px 0;
 }
 
-/* CSS cho phần footer */
-.footer {
-    display: flex;
-    justify-content: space-around;
+footer {
     background-color: #333;
     color: #fff;
-    padding: 50px 0;
+    padding: 30px 0;
+    text-align: center;
 }
 
-.item--footer {
+.footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.footer-section {
+    flex: 1;
+}
+
+.footer-section h3 {
+    margin-bottom: 10px;
+}
+
+.tour-images {
+    display: flex;
+    flex-direction: column; /* Hiển thị ảnh theo chiều dọc */
+}
+
+.tour-images img {
+    width: 100px;
+    margin-bottom: 10px; /* Khoảng cách giữa các ảnh */
+}
+
+.footer-menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    margin-top: 20px;
+    flex: 0,5;
 }
 
-.item--footer img {
-    max-width: 100px;
-    max-height: 100px;
-    margin-top: 10px;
+.menu-title {
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.footer-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-menu ul li {
+    margin-bottom: 10px;
+}
+
+.footer-menu ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+.footer-about{
+    flex: 1;
+}
+.footer-contact{
+    flex: 1;
+}
+.footer-tours{
+    flex: 1;
+}
+.footer-about > a {
+    color: #fff;
 }
