--- a/dl.css
+++ b/dl.css
@@ -1,3 +1,4 @@
+
 .container {
     width: 100%;
     height: auto;
@@ -419,39 +420,75 @@ footer {
 .footer-menu {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
-    flex: 0,5;
+    font-family: Arial, sans-serif; /* Chọn font chữ */
+}
+
+.footer-menu .footer-menu-inner {
+    margin-bottom: 10px; /* Để tạo ra một khoảng cách dưới tiêu đề "MENU" */
 }
 
 .menu-title {
-    color: #fff;
-    font-weight: bold;
-    margin-bottom: 10px;
+    text-align: center; /* Căn chỉnh tiêu đề "MENU" vào giữa */
 }
 
-.footer-menu ul {
-    list-style-type: none;
-    padding: 0;
+.list-menu {
+    padding-left: 0; /* Xóa padding mặc định của danh sách */
 }
 
-.footer-menu ul li {
-    margin-bottom: 10px;
+.list-menu li {
+    text-align: left; /* Căn chỉnh các mục menu về bên trái */
 }
 
-.footer-menu ul li a {
-    color: #fff;
-    text-decoration: none;
-}
 .footer-about{
     flex: 1;
 }
 .footer-contact{
     flex: 1;
 }
+.footer-contact li {
+    display: flex;
+    align-items: center;
+    margin-right: 20px; /* Điều chỉnh khoảng cách giữa biểu tượng và văn bản */
+}
+
+.footer-contact li img {
+    margin-right: 10px; /* Điều chỉnh khoảng cách giữa biểu tượng và văn bản */
+}
 .footer-tours{
     flex: 1;
 }
 .footer-about > a {
     color: #fff;
+}
+.item--tour--f {
+    display: flex;
+    align-items: center;
+}
+
+.item--tour--f img {
+    margin-right: 10px; /* Điều chỉnh khoảng cách giữa ảnh và nội dung */
+    max-width: 100%; /* Đảm bảo ảnh không vượt quá kích thước của phần tử cha */
+    height: auto; /* Đảm bảo tỷ lệ khung hình được giữ nguyên */
+}
+.footer,
+.footer-container {
+    font-family: Arial, sans-serif; /* Chọn font chữ */
+}
+
+.footer * {
+    font-size: 14px; /* Đặt kích thước chữ cho tất cả các phần tử trong footer */
+    line-height: 1.5; /* Đặt độ cao dòng cho tất cả các phần tử trong footer */
+}
+
+.footer li {
+    list-style: none; /* Loại bỏ dấu tích đầu dòng của danh sách */
+}
+
+.footer li p {
+    margin: 0; /* Loại bỏ margin của các đoạn văn bản trong danh sách */
+}
+.list-menu li a {
+    font-size: 14px; /* Đặt kích thước chữ cho các mục menu */
+    color: #fff; /* Đặt màu chữ cho các mục menu */
+    text-decoration: none; /* Loại bỏ gạch chân của các liên kết */
 }
