--- a/dl.css
+++ b/dl.css
@@ -1,46 +1,37 @@
-
 .container {
     width: 100%;
     height: auto;
 }
-
 .menu {
     width: 100%;
     height: 120px;
     background-color: white;
 }
-
 .header {
     width: 100%;
     height: 100px;
     display: flex;
     justify-content: space-between;
 }
-
 .logo {
     width: 50%;
 }
-
 .up {
     width: 100%;
     height: 70px;
     margin: 0 auto;
 }
-
-.up img {
+.up img{
     width: 150px;
     height: 70px;
 }
-
-.up ul a {
+.up ul a{
     list-style: none;
     margin-top: 0px;
 }
-
-.up ul form {
+.up ul form{
     float: right;
 }
-
 .search {
     height: 35px;
     width: 750px;
@@ -48,12 +39,10 @@
     margin-right: 400px;
     align-items: center;
 }
-
-.search input {
+.search input{
     width: 500px;
     height: 35px;
 }
-
 .search button {
     width: 50px;
     height: 40px;;
@@ -61,72 +50,75 @@
     border: none;
     background-color: #428BCA;
 }
-
 .header .search {
     flex: 1;
     position: relative;
 }
-
 .header a {
     text-decoration: none;
     color: white;
 }
-
 .down {
     padding: 0px 10px;
     background-color: purple;
 }
-
+.a {
+    text-decoration: none;
+}
 .down ul {
     list-style: none;
     display: flex;
     justify-content: center;
 }
-
 .down li a {
     display: flex;
     list-style: none;
     padding: 15px 20px;
     border-right: 1px solid white;
 }
-
 .down li a:hover {
     background-color: #3A8DD1;
 }
-
 .slider {
     width: 100%;
     margin-top: 50px;
 }
-
 .item-slider {
     width: 100%;
 }
-
-.top--tour {
+.top--tour{
     text-decoration: none;
     text-align: center;
     margin-bottom: 32px;
+}
+.top--tour {
+    text-align: center;
+    margin-bottom: 32px;
+}
+.item-slider .img2{
+    width: 100%;
+}
+.top--tour {
+    text-align: center;
+    margin-bottom: 32px;
+}
+.top--tour h2 {
     color: #660066;
     font-weight: 900;
 }
-
 .list--tour {
     display: flex;
     flex-wrap: wrap;
     gap: 28px 18px;
 }
-
 .item--tour {
     width: 32%;
     position: relative;
 }
-
 .item--tour img {
     max-width: 100%;
     display: block;
 }
-
 .content--tour {
     position: absolute;
     color: #fff;
@@ -137,7 +129,6 @@
     padding: 16px 30px;
     background: #5c305ba5;
 }
-
 .banner {
     position: relative;
     width: 100%;
@@ -158,11 +149,10 @@
 
 .banner .img3 {
     width: 100%;
-    height: 250px;
-    max-width: 100%;
-    object-fit: cover;
+    height: 250px; /* Giảm chiều cao của hình ảnh */
+    max-width: 100%; /* Đảm bảo hình ảnh không vượt quá chiều rộng của phần tử cha */
+    object-fit: cover; /* Đảm bảo hình ảnh không bị biến dạng khi thay đổi kích thước */
 }
-
 .content--banner {
     position: absolute;
     width: 100%;
@@ -192,7 +182,8 @@
     margin-top: 0px;
     padding: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: center; /* Căn giữa phần tour-main1 trên trang */
+    margin-left: 432px;
     flex-wrap: wrap;
 }
 
@@ -202,9 +193,8 @@
     flex-wrap: wrap;
     gap: 28px 18px;
 }
-
 .item--tour1 {
-    width: calc(33.33% - 20px);
+    width: 100%; /* Độ rộng của mỗi item tour1 */
     position: relative;
     overflow: hidden;
 }
@@ -237,60 +227,38 @@
 .item--tour1:hover .content--tour1 {
     bottom: -50px;
 }
-
 .box-wp{
     text-align: center;
 }
-
 .item--tour1 {
     display: flex;
-}
-
-.item--tour1 img{
+    
+ }
+ .item--tour1 img{
     flex: 1;
     max-width: 100%; 
 }
-
-.chung {
+.chung{
     display: flex;
     justify-content: space-between;
 }
-
 .why {
+    margin-top: 0px;
+    padding: 40px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 0;
-    flex-direction: column; /* Thêm chiều dọc */
-}
-
-.why-container {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; /* Thêm chiều dọc */
-}
-
-.list-why {
-    display: flex;
+    justify-content: center; /* Căn giữa phần tour-main1 trên trang */
+    margin-left: 432px;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center; /* Căn giữa theo chiều dọc */
 }
-
-.item-why {
-    width: 25%;
-    text-align: center;
-    margin: 20px 0; /* Thêm khoảng cách dưới cho các mục */
-}
-
 
 .why h2 {
     color: #660066;
     margin-bottom: 40px;
     font-weight: 900;
+}
+
+.list-why {
+    display: flex;
 }
 
 .item-why {
@@ -312,17 +280,14 @@
     display: block;
     margin: 0 auto;
 }
-
 .news-main {
-    width: 80%; /* Điều chỉnh chiều rộng của phần "Cẩm nang du lịch" */
-    margin: 0 auto; /* Căn giữa theo chiều ngang */
+    padding-bottom: 60px;
 }
 
 .top--news {
     text-align: center;
     margin-bottom: 40px;
 }
-
 .top--news h2 {
     color: #660066;
     font-weight: 900;
@@ -355,6 +320,7 @@
 }
 
 .cus-news h3 {
+
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
@@ -376,7 +342,6 @@
     color: #000;
     font-weight: 600;
 }
-
 section.why {
     display: flex;
     justify-content: center;
@@ -389,6 +354,7 @@ footer {
     color: #fff;
     padding: 30px 0;
     text-align: center;
+    width: 100%;
 }
 
 .footer-container {
@@ -450,7 +416,20 @@ footer {
     align-items: center;
     margin-right: 20px; /* Điều chỉnh khoảng cách giữa biểu tượng và văn bản */
 }
-
+.footer-contact .list-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.footer-contact .list-info .info{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.footer-contact img{
+    max-width: 10%;
+    display: block;
+}
 .footer-contact li img {
     margin-right: 10px; /* Điều chỉnh khoảng cách giữa biểu tượng và văn bản */
 }
@@ -475,7 +454,7 @@ footer {
     font-family: Arial, sans-serif; /* Chọn font chữ */
 }
 
-.footer * {
+.footer  {
     font-size: 14px; /* Đặt kích thước chữ cho tất cả các phần tử trong footer */
     line-height: 1.5; /* Đặt độ cao dòng cho tất cả các phần tử trong footer */
 }
@@ -491,4 +470,34 @@ footer {
     font-size: 14px; /* Đặt kích thước chữ cho các mục menu */
     color: #fff; /* Đặt màu chữ cho các mục menu */
     text-decoration: none; /* Loại bỏ gạch chân của các liên kết */
+}
+.footer, .footer-container {
+    font-family: Arial, sans-serif; /* Chọn font chữ cho tất cả các phần tử trong footer */
+}
+
+.footer  {
+    font-size: 14px; /* Đặt kích thước chữ cho tất cả các phần tử trong footer */
+    line-height: 1.5; /* Đặt độ cao dòng cho tất cả các phần tử trong footer */
+}
+
+.footer li {
+    list-style: none; /* Loại bỏ dấu tích đầu dòng của danh sách */
+}
+
+.footer li p {
+    margin: 0; /* Loại bỏ margin của các đoạn văn bản trong danh sách */
+}
+
+.list-menu li a {
+    font-size: 14px; /* Đặt kích thước chữ cho các mục menu */
+    color: #fff; /* Đặt màu chữ cho các mục menu */
+    text-decoration: none; /* Loại bỏ gạch chân của các liên kết */
+}
+
+.menu-title {
+    text-align: center; /* Căn chỉnh tiêu đề "MENU" vào giữa */
+    font-family: Arial, sans-serif; /* Chọn font chữ */
+    color: #fff; /* Đặt màu chữ cho tiêu đề "MENU" */
+    font-size: 16px; /* Đặt kích thước chữ cho tiêu đề "MENU" */
+    margin-bottom: 10px; /* Để tạo ra một khoảng cách dưới tiêu đề "MENU" */
 }
